# Twitch-Channel-Points-Miner-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
config/: config.example.yaml
tests/: test_config.py  test_http.py  test_models.py
twitch_miner/: __init__.py  __main__.py  app.py
twitch_miner/analytics/: __init__.py  service.py  store.py
twitch_miner/analytics/static/: index.html
twitch_miner/config/: __init__.py  loader.py  models.py  watcher.py
twitch_miner/core/: __init__.py  api.py  auth.py  constants.py  exceptions.py  gql.py  http.py  logger.py
twitch_miner/models/: __init__.py  campaign.py  drop.py  events.py  stream.py  streamer.py
twitch_miner/services/: __init__.py  drops.py  listener.py  points.py  pubsub.py  registry.py  watch.py
twitch_miner/utils/: __init__.py  ids.py
